test/files/neg/t3653.check
t3653.scala:3: error: method x is defined twice;
  the conflicting method x was defined at line 2:8
   def x(implicit x: Int) = 5
       ^
one error found
